--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "tsc"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "protobufjs": "^7.2.3",
+    "socket.io": "^4.7.0",
     "ws": "^8.13.0",
-    "zeromq": "5"
+    "zeromq": "6.0.0-beta.17"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
